attempting to fix body alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .container{
     margin-top: 40px;
     font-family: 'Poppins', sans-serif;
-    width: 100%;
 }
